Quick fix overflowing bootstrap rows

--- a/client/stylesheets/globals/base.import.less
+++ b/client/stylesheets/globals/base.import.less
@@ -79,11 +79,20 @@ li {
   list-style: none;
   padding: 12px;
   border-bottom: #eee solid 1px;
-  
+
 }
 
 ul {
   margin: 0;
   padding: 0;
   background: white;
+}
+
+.row {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
+.invited-friends-list {
+  text-align: center;
 }
